; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cam/extr_cam_xpt.c_xpt_freeze_simq.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cam/extr_cam_xpt.c_xpt_freeze_simq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cam_sim = type { %struct.cam_devq* }
%struct.cam_devq = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @xpt_freeze_simq(%struct.cam_sim* %0, i64 %1) #0 {
  %3 = alloca %struct.cam_sim*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.cam_devq*, align 8
  %6 = alloca i64, align 8
  store %struct.cam_sim* %0, %struct.cam_sim** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.cam_sim*, %struct.cam_sim** %3, align 8
  %8 = getelementptr inbounds %struct.cam_sim, %struct.cam_sim* %7, i32 0, i32 0
  %9 = load %struct.cam_devq*, %struct.cam_devq** %8, align 8
  store %struct.cam_devq* %9, %struct.cam_devq** %5, align 8
  %10 = load %struct.cam_devq*, %struct.cam_devq** %5, align 8
  %11 = getelementptr inbounds %struct.cam_devq, %struct.cam_devq* %10, i32 0, i32 0
  %12 = call i32 @mtx_lock(i32* %11)
  %13 = load i64, i64* %4, align 8
  %14 = load %struct.cam_devq*, %struct.cam_devq** %5, align 8
  %15 = getelementptr inbounds %struct.cam_devq, %struct.cam_devq* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = sext i32 %17 to i64
  %19 = add nsw i64 %18, %13
  %20 = trunc i64 %19 to i32
  store i32 %20, i32* %16, align 4
  %21 = sext i32 %20 to i64
  store i64 %21, i64* %6, align 8
  %22 = load %struct.cam_devq*, %struct.cam_devq** %5, align 8
  %23 = getelementptr inbounds %struct.cam_devq, %struct.cam_devq* %22, i32 0, i32 0
  %24 = call i32 @mtx_unlock(i32* %23)
  %25 = load i64, i64* %6, align 8
  ret i64 %25
}

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @mtx_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
